--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,11 @@
 default_stages: [commit]
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.1.0
+    rev: v4.0.1
     hooks:
     - id: check-merge-conflict
   - repo: https://github.com/psf/black
-    rev: stable
+    rev: 21.7b0
     hooks:
     - id: black
       language_version: python3.6
