--- a/web/package.json
+++ b/web/package.json
@@ -39,12 +39,12 @@
     "dependencies": {
         "@blueking/bkcharts": "^2.0.10",
         "@icon-cool/bk-icon-gsekit": "0.0.9",
-        "axios": "0.18.0",
+        "axios": "0.21.4",
         "bk-magic-vue": "2.2.14",
         "cookie": "0.4.0",
         "monaco-editor": "0.22.3",
         "query-string": "6.5.0",
-        "url-parse": "1.4.7",
+        "url-parse": "1.5.3",
         "vue": "2.5.22",
         "vue-i18n": "8.21.1",
         "vue-router": "3.0.6",
@@ -65,8 +65,8 @@
         "@babel/preset-env": "^7.13.9",
         "@babel/register": "~7.4.4",
         "@babel/runtime": "~7.4.5",
-        "@bkui/eslint-config-bk": "^2.0.0-beta.2",
-        "@bkui/stylelint-config-bk": "^2.0.0",
+        "@bkui/eslint-config-bk": "2.0.0-beta.7",
+        "@bkui/stylelint-config-bk": "2.0.0",
         "@commitlint/cli": "11.0.0",
         "@commitlint/config-conventional": "11.0.0",
         "babel-core": "7.0.0-bridge.0",
@@ -94,7 +94,7 @@
         "husky": "4.3.0",
         "mini-css-extract-plugin": "0.12.0",
         "monaco-editor-webpack-plugin": "3.0.0",
-        "npm": "6.9.0",
+        "npm": "6.14.6",
         "open": "6.3.0",
         "optimize-css-assets-webpack-plugin": "5.0.1",
         "ora": "3.4.0",
