--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@
 # 需要额外的python包，可直接在文件后面添加
 # 请确保指定的包和版本号，可通过pip安装
 
-blueapps-open==4.0.1
+# sed -i 's|blueapps-open|blueapps|g' requirements.txt
+# 确保内外部版本统一，打包脚本的替换规则为：blueapps-open -> blueapps，不替换版本号
+blueapps-open==4.0.2rc0
 python-json-logger==0.1.7
 requests==2.22.0
 MarkupSafe==1.1.1
@@ -11,7 +13,7 @@ django-dbconn-retry==0.1.5
 # django
 django==3.2.4
 django-celery-beat==2.2.0
-django-celery-results==2.1.0
+#django-celery-results==2.0.0
 django-filter==2.4.0
 django-cors-headers==3.7.0
 djangorestframework==3.12.4
@@ -31,8 +33,7 @@ cryptography==3.2
 bk-iam==1.1.19
 
 # pipeline
-bamboo-pipeline==3.5.4
-bamboo-engine==1.2.1
+bamboo-pipeline==3.12.0
 
 # for sentry
 raven==6.1.0
@@ -42,16 +43,14 @@ ddtrace==0.14.1
 
 # others
 mock==2.0.0
-urllib3==1.26.6
-pytz==2020.4
+urllib3==1.25.11
 greenlet==0.4.17
-jsonschema==3.2.0
 botocore==1.12.253
 
 gunicorn==19.6.0
 gevent==1.2.2
 celery==4.4.7
-mako==1.1.3
+mako==1.1.4
 lxml==4.6.3
 ruamel.yaml==0.17.16
 packaging==20.9
