--- a/app_desc.yaml
+++ b/app_desc.yaml
@@ -36,7 +36,7 @@ modules:
 
         processes:
             web:
-                command: gunicorn --timeout 600 --max-requests 200 --max-requests-jitter 20 wsgi -w 8 -b :$PORT --access-logfile - --error-logfile - --access-logformat '[%(h)s] %({request_id}i)s %(u)s %(t)s "%(r)s" %(s)s %(D)s %(b)s "%(f)s" "%(a)s"'
+                command: ./bin/start_web.sh
                 plan: 4C2G5R
                 replicas: 1
             dworker:
@@ -63,3 +63,5 @@ modules:
                 command: python manage.py watch_process
                 plan: 4C2G5R
                 replicas: 1
+        scripts:
+            pre_release_hook: bash bin/pre-release
