--- a/requirements.txt
+++ b/requirements.txt
@@ -54,3 +54,16 @@ mako==1.1.4
 lxml==4.6.3
 ruamel.yaml==0.17.16
 packaging==20.9
+
+# prometheus
+django-prometheus==2.2.0
+
+# opentelemetry
+opentelemetry-api==1.5.0
+opentelemetry-sdk==1.5.0
+opentelemetry-exporter-otlp==1.5.0
+opentelemetry-instrumentation-django==0.24b0
+opentelemetry-instrumentation-dbapi==0.24b0
+opentelemetry-instrumentation-requests==0.24b0
+opentelemetry-instrumentation-celery==0.24b0
+opentelemetry-instrumentation-logging==0.24b0
