--- a/requirements.txt
+++ b/requirements.txt
@@ -59,6 +59,7 @@ packaging==20.9
 django-prometheus==2.2.0
 
 # opentelemetry
+protobuf==3.19.4
 opentelemetry-api==1.5.0
 opentelemetry-sdk==1.5.0
 opentelemetry-exporter-otlp==1.5.0
