--- a/web/package.json
+++ b/web/package.json
@@ -40,13 +40,13 @@
         "@blueking/bkcharts": "^2.0.10",
         "@icon-cool/bk-icon-gsekit": "0.0.9",
         "axios": "0.21.4",
-        "bk-magic-vue": "2.2.14",
+        "bk-magic-vue": "2.5.4-beta.9",
         "cookie": "0.4.0",
         "lodash": "~4.17.21",
         "monaco-editor": "0.22.3",
         "query-string": "6.5.0",
         "url-parse": "1.5.3",
-        "vue": "2.5.22",
+        "vue": "2.7.10",
         "vue-i18n": "8.21.1",
         "vue-router": "3.0.6",
         "vuex": "3.1.1"
@@ -115,8 +115,8 @@
         "shelljs": "0.8.3",
         "terser-webpack-plugin": "1.2.4",
         "url-loader": "1.1.2",
-        "vue-loader": "15.7.0",
-        "vue-template-compiler": "2.5.22",
+        "vue-loader": "15.8.3",
+        "vue-template-compiler": "2.7.10",
         "webpack": "4.46.0",
         "webpack-bundle-analyzer": "3.3.2",
         "webpack-cli": "3.3.2",
